--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "parsicle",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "A library for creating serializers and deserializers for JSON-like schema.",
 	"main": "./parsicle",
 	"author": "Liam Doherty",
@@ -8,6 +8,6 @@
 		"underscorem": ">0.1"
 	},
 	"engines": {
-		 "node" : "0.6"
+		 "node" : ">=0.6"
 	}
 }
